--- a/details.yaml
+++ b/details.yaml
@@ -1,12 +1,11 @@
-name: Jonathan Soma
-bio: I'm not a journalist but I can pretend to be one (sometimes)
+name: Annie Njanja
+bio: I am a journalist with nearly 10 years of experience. I have covered health, economics and technology beats.
 links:
-  - target: mailto:jonathan.soma@gmail.com
+  - target: mailto:akn2129@columbia.edu
     text: 📧 email
-  - target: https://jonathansoma.com
+  - target: https://annienjanja.com
     text: 🏠 homepage
-  - target: https://twitter.com/dangerscarf
-    text: '@dangerscarf'
+  - target: https://twitter.com/AnnieNjanja
+    text: '@AnnieNjanja'
 projects:
-  - https://docs.google.com/document/d/126LLa_EKG_nBbmA53HCG3pMVbjKBRnQWJWDL9FUSmHo/edit?usp=sharing
-  - https://docs.google.com/document/d/1-ehYb4V3gtrS7LTlfqr27cZum1qGwX2KwczYLa1w-2Y/edit?usp=sharing
+  - https://docs.google.com/document/d/1yq40V_wkscwwVxymzH3ysfNBukCR7AxZYBXxI-qxQvs/edit?usp=sharing
