--- a/details.yaml
+++ b/details.yaml
@@ -1,5 +1,5 @@
 name: Annie Njanja
-bio: I am a journalist with nearly 10 years of experience. I have covered health, economics and technology beats.
+bio: I am a journalist with nearly 10 years of experience, during which I have covered health, economics and technology beats.
 links:
   - target: mailto:akn2129@columbia.edu
     text: 📧 email
